# viacep-api

./: pyproject.toml
src/: main.py
src/routers/: cep_router.py
src/viacep_api/schemas/: cep.py
